--- a/src/App.css
+++ b/src/App.css
@@ -15,9 +15,10 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 10vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  gap: 20px;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
