Samurai-way 12 lesson

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  text-align: center;
+
 }
 
 .App-logo {
@@ -36,4 +36,32 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.app-wrapper {
+  width: 100%;
+  display: grid;
+  align-items: center;
+  grid-template-rows: 150px 1fr;
+  grid-template-columns: 2fr 10fr;
+  grid-gap:5px;
+  grid-template-areas:
+  "header header"
+  "nav main";
+}
+.header{
+grid-area: header;
+  background-color: green;
+}
+.header img{
+  height: 150px;
+
+}
+.nav {
+  grid-area: nav;
+  background-color: salmon;
+}
+.main{
+  grid-area: main;
+  background-color: darkcyan;
 }
