--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,10 +1,25 @@
 .nav {
   grid-area: nav;
   background-color: darkgrey;
+  padding: 10px 20px;
 }
 
 .item {
   color: #282c34;
   font-size: xx-large;
   font-weight: bold;
+}
+
+.item a {
+  color:#282c34;
+  text-decoration: none;
+}
+
+.item a:hover {
+text-transform: uppercase;
+}
+
+a.activeLink {
+  text-transform: uppercase;
+  color: darkblue;
 }
