--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
-.App {
-
+.App body {
+  background-color: #49c5b6;
 }
 
 .App-logo {
@@ -39,11 +39,12 @@
 }
 
 .app-wrapper {
+  background-color: #61dafb;
   width: 100%;
+  height: 100%;
   display: grid;
   grid-template-rows: 150px 1fr;
   grid-template-columns: 2fr 10fr;
-  grid-gap:5px;
   grid-template-areas:
   "header header"
   "nav main";
