--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,6 +1,7 @@
 .header{
   grid-area: header;
-  background-color: #f78733;
+  background-color: #DD6E42;
+  box-shadow: 0px 2px 25px black;
 
 }
 .header img{
