Samurai-way profile styling

--- a/src/components/Main/Mypsots/Myposts.module.css
+++ b/src/components/Main/Mypsots/Myposts.module.css
@@ -2,3 +2,16 @@
   color: aliceblue;
   text-transform: uppercase;
 }
+.wrapper{
+  margin: 0 auto;
+  padding: 10px;
+}
+.textarea {
+  width: 80%;
+  height: 200px;
+  border-radius: 20px;
+}
+
+button {
+
+}
