--- a/src/components/Main/Mypsots/Myposts.module.css
+++ b/src/components/Main/Mypsots/Myposts.module.css
@@ -1,4 +1,5 @@
 .item {
+  margin: 10px;
   color: aliceblue;
   text-transform: uppercase;
 }
@@ -13,5 +14,16 @@
 }
 
 button {
-
+  display: inline-block;
+  margin-left: 10px;
+  margin-top: 2px;
+  color: #fff;
+  text-align: center;
+  cursor: pointer;
+  user-select: none;
+  background-color: #0066cc;
+  border: 1px solid transparent;
+  padding: 0.375rem 1.75rem;
+  font-size: 1rem;
+  border-radius: 0.75rem;
 }
