--- a/src/components/Main/Dialogs/Dialogs.module.css
+++ b/src/components/Main/Dialogs/Dialogs.module.css
@@ -30,7 +30,7 @@
     content: "";
 }
 .messages{
-    max-width: 600px;
+    max-width: 800px;
 }
 .messages1{
     text-align:right;
@@ -38,4 +38,37 @@
 .messages2{
     text-align:left;
     color: #DD6E42;
+}
+
+.sendForm {
+    margin: 10px;
+    display: grid;
+    grid-template-columns: 1fr 120px;
+}
+
+textarea {
+    background-color: #F5F7FB;
+    padding: 10px 24px;
+    border-radius: 20px;
+    font-size: 17px;
+    resize: none;
+    box-shadow: 0px 5px 20px rgba(29, 33, 38, 0.03), 0px 1px 2px rgba(29, 33, 38, 0.1);
+    margin-right: 44px;
+    border: none;
+}
+
+.button {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 20px;
+    color: #fff;
+    text-align: center;
+    cursor: pointer;
+    user-select: none;
+    background-color: #0066cc;
+    border: 1px solid transparent;
+    padding: 0.375rem 1.75rem;
+    border-radius: 20px;
 }
