--- a/src/components/Main/Mypsots/Myposts.module.css
+++ b/src/components/Main/Mypsots/Myposts.module.css
@@ -7,6 +7,12 @@
   margin: 0 auto;
   padding: 10px;
 }
+
+.textareaTitle {
+  width: 80%;
+  height: 40px;
+  border-radius: 20px;
+}
 .textarea {
   width: 80%;
   height: 200px;
