--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 10vh;
+  height: 50px;
   display: flex;
   flex-direction: row;
   gap: 20px;
@@ -40,7 +40,7 @@
   width: 100%;
   height: 100%;
   display: grid;
-  grid-template-rows: 150px 1fr;
+  grid-template-rows: 50px 1fr;
   grid-template-columns: 2fr 10fr;
   grid-template-areas:
   "header header"
