--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,5 +1,6 @@
 .nav {
   grid-area: nav;
+  display:inline-block;
   padding: 10px 20px;
   border-right: solid 1px;
   border-color: deepskyblue;
@@ -9,18 +10,50 @@
   color: #282c34;
   font-size: xx-large;
   font-weight: bold;
+  display: flex;
 }
-
+.nav_text{
+  opacity: 0.9;
+}
 .item a {
+  display: flex;
   color:#282c34;
   text-decoration: none;
+  opacity: 0.6;
+  gap: 10px
+}
+.nav_text{
+  opacity: 0;
+}
+.item a:hover {
+  text-transform: uppercase;
+  opacity: 1;
 }
 
-.item a:hover {
-text-transform: uppercase;
+.item a:active {
+  text-transform: uppercase;
+  opacity: 1;
 }
 
 a.activeLink {
   text-transform: uppercase;
   color: darkcyan;
+  opacity: 1;
+}
+
+.nav_ico {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  background-color: red;
+  opacity: 1;
+  transition: .1s ease opacity;
+  border-radius: 50%;
+}
+
+.nav_ico:hover,
+.nav_ico.active {
+  opacity: 1;
 }
