--- a/src/components/Main/Users/Users.module.css
+++ b/src/components/Main/Users/Users.module.css
@@ -1,14 +1,14 @@
-.loader
-{
-    display: inline-block;
-    width: 50px;
-    height: 50px;
-    border: 3px solid rgba(255,255,255,.3);
-    border-radius: 50%;
-    border-top-color: #512DE4;
-    animation: spin 1s ease-in-out infinite;
-    -webkit-animation: spin 1s ease-in-out infinite;
+.loading {
+    /*vertical-align: middle;*/
+    /*position: absolute;*/
+    width:100%;
+    padding-top: 20%;
+    margin: 0 auto;
+    /*height: 100vh;*/
+    background-color: rgba(255,2552,255,0.5);
+    text-align: center;
 }
+
 
 @keyframes spin {
     to { -webkit-transform: rotate(360deg); }
