--- a/src/components/Main/Users/Users.module.css
+++ b/src/components/Main/Users/Users.module.css
@@ -1,13 +1,61 @@
 .loading {
-    width:100%;
+    width: 100%;
     margin: 0 auto;
-    background-color: rgba(255,2552,255,0.5);
+    background-color: rgba(255, 2552, 255, 0.5);
 }
 
 
 @keyframes spin {
-    to { -webkit-transform: rotate(360deg); }
+    to {
+        -webkit-transform: rotate(360deg);
+    }
 }
+
 @-webkit-keyframes spin {
-    to { -webkit-transform: rotate(360deg); }
+    to {
+        -webkit-transform: rotate(360deg);
+    }
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 266px);
+    grid-template-rows: 430px;
+    grid-auto-rows: 430px;
+    column-gap: 24px;
+    row-gap: 20px;
+    justify-content: center;
+}
+
+.item {
+    width: 200px;
+    height: 300px;
+    background: linear-gradient(180deg, #B347EA 0%, #09F9BF 100%);
+    box-shadow: 20px 24px 34px rgba(0, 0, 0, 0.45);
+    border-radius: 30px;
+
+}
+
+.item__photo {
+    width: 200px;
+    height: 300px;
+    /*background: linear-gradient(180deg, rgba(41, 47, 63, 0) 0%, rgba(41, 47, 63, 0.8) 100%);*/
+    box-shadow: 20px 24px 34px rgba(0, 0, 0, 0.45);
+    border-radius: 30px;
+}
+.item__photo img {
+    width: 200px;
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+}
+.item__photo:after {
+    width: 200px;
+    height: 300px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 2;
+    background: linear-gradient(180deg, rgba(41, 47, 63, 0) 0%, rgba(41, 47, 63, 0.8) 100%);
 }
