--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,5 +1,8 @@
-.App  {
-
+:root {
+  --main-bg-color: #292F3F;
+}
+:root {
+  --text-white: #FFAD49;
 }
 
 .App-logo {
@@ -36,9 +39,8 @@
   }
 }
 
-.app-wrapper {
+.appWrapper {
   width: 100%;
-  height: 100%;
   display: grid;
   grid-template-rows: 50px 1fr;
   grid-template-columns: 2fr 10fr;
@@ -53,5 +55,5 @@
 }
 a{
   text-decoration: none;
-  color: inherit;
+  /*color: inherit;*/
 }
