--- a/src/components/Main/Users/Users.module.css
+++ b/src/components/Main/Users/Users.module.css
@@ -18,44 +18,88 @@
 }
 
 .grid {
+    margin: 20px;
     display: grid;
-    grid-template-columns: repeat(auto-fit, 266px);
+    grid-template-columns: repeat(auto-fit, 300px);
     grid-template-rows: 430px;
     grid-auto-rows: 430px;
-    column-gap: 24px;
+    column-gap: 20px;
     row-gap: 20px;
     justify-content: center;
 }
 
 .item {
+    position:relative;
+    width: 200px;
+    height: 300px;
+    background: linear-gradient(180deg, #FFE81D 0%, #00F0FF 100%);
+    box-shadow: 20px 24px 34px rgba(0, 0, 0, 0.45);
+    border-radius: 30px;
+    display: flex;
+    flex-direction: column;
+}
+.item1 {
+    position:relative;
+    width: 200px;
+    height: 300px;
+    background: linear-gradient(180deg, #03A9F1 0%, #A0025A 100%);
+    box-shadow: 20px 24px 34px rgba(0, 0, 0, 0.45);
+    border-radius: 30px;
+    display: flex;
+    flex-direction: column;
+}
+.item2 {
+    position:relative;
     width: 200px;
     height: 300px;
     background: linear-gradient(180deg, #B347EA 0%, #09F9BF 100%);
     box-shadow: 20px 24px 34px rgba(0, 0, 0, 0.45);
     border-radius: 30px;
-
+    display: flex;
+    flex-direction: column;
 }
-
-.item__photo {
-    width: 200px;
-    height: 300px;
-    /*background: linear-gradient(180deg, rgba(41, 47, 63, 0) 0%, rgba(41, 47, 63, 0.8) 100%);*/
-    box-shadow: 20px 24px 34px rgba(0, 0, 0, 0.45);
-    border-radius: 30px;
+.userName {
+    display: flex;
+    width: 100%;
+    position: absolute;
+    bottom: 20px;
+    justify-content: center;
+    color:black;
+    background-color: rgba(255,255,255,20%);
+    font-weight: 500;
+    font-size: 24px;
 }
-.item__photo img {
+.img {
     width: 200px;
     border-top-left-radius: 30px;
     border-top-right-radius: 30px;
 }
-.item__photo:after {
-    width: 200px;
-    height: 300px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    z-index: 2;
-    background: linear-gradient(180deg, rgba(41, 47, 63, 0) 0%, rgba(41, 47, 63, 0.8) 100%);
+.pagination {
+    vertical-align: middle;
+    text-align: center;
+}
+.paginationItem{
+    margin:5px;
+    display: inline-block;
+    color:white;
+    font-weight: bold;
+    width:50px;
+    height: 50px;
+    border-radius: 50%;
+    border: 1px solid white;
+    line-height: 50px;
+    cursor: pointer;
+}
+.paginationItem:hover {
+    background-color: #F18303;
+}
+.activePage{
+    background-color: #F18303;
+}
+.followed img{
+    /*position: absolute;*/
+    width: 50px;
+    height: 50px;
+    top:10px;
+    right:10px;
 }
