--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,18 @@
+:root {
+  --main-bg-color: #292F3F;
+}
+:root {
+  --text-white: #FFAD49;
+}
+
 body {
+  background-color: var(--main-bg-color);
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #DFFDFF;
 }
 
 code {
