--- a/src/components/Main/Users/Users.module.css
+++ b/src/components/Main/Users/Users.module.css
@@ -97,7 +97,7 @@
     background-color: #F18303;
 }
 .followed img{
-    /*position: absolute;*/
+    position: absolute;
     width: 50px;
     height: 50px;
     top:10px;
