refactor: add avatar for nonphoto

--- a/src/components/Main/Profile/Profile.module.css
+++ b/src/components/Main/Profile/Profile.module.css
@@ -1,6 +1,6 @@
 .header {
     height: 200px;
-    background: url(../../../img/clouds.jpg) no-repeat center bottom;
+    background: url(../../../assets/img/clouds.jpg) no-repeat center bottom;
     margin-top:10px;
 }
 
